Fix some spacing issues with the new listen button.

--- a/mftb5/static/less/style.less
+++ b/mftb5/static/less/style.less
@@ -156,7 +156,7 @@ main {
 
     .track-name {
       span.track-number {
-        margin-right: .3em;
+        margin: 0 .3em;
         .light();
 
         &::after {
@@ -199,6 +199,8 @@ main {
       border-radius: .2em;
       background-color: @highlight;
       padding: .15em .2em 0;
+      position: relative;
+      top: .05em;
       .fa(@fa-var-headphones);
     }
 
